# Pi-Dev-Ops

./: .dockerignore  .env  .env.example  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  CLAUDE.md  CONTEXT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DESIGN.md  Dockerfile  MANAGED_AGENTS_v4_FINAL.md  NEXUS.md  PUSH-ME-FIRST.md  README.md  READY_TO_DEPLOY.md  SECURITY.md  SPRINT_4_COMPLETION.md  WIKI.md  _deploy.py  agentskills.json  agentskills.yaml  claude.md  opencode.json  pyproject.toml  railway.json  railway.toml  triage-rules.md
.agents/: WIKI.md
.claude/: DESIGN.md  WIKI.md  launch.json  settings.json  settings.local.json
.cursor/: permissions.json
.github/: WIKI.md  (+4 more)
.harness/artefacts/synthex/sandbox/_consolidated_scattered/Pi-CEO/.harness/artefacts/synthex/sandbox/Synthex/brand-intelligence/: CLAUDE.md  cost_tracker.py  logger.py  pyproject.toml  run-brand-pipeline.sh  server-setup.sh  subagents.py  synthex-deploy.sh  synthex_orchestrator.py
.harness/artefacts/synthex/sandbox/_consolidated_scattered/Pi-CEO/.harness/artefacts/synthex/sandbox/Synthex/brand-intelligence/monitoring/: healthcheck.sh
.harness/artefacts/synthex/sandbox/_consolidated_scattered/Pi-CEO/.harness/artefacts/synthex/sandbox/Synthex/brand-intelligence/synthex_brand_intelligence/: __init__.py
.harness/artefacts/synthex/sandbox/_consolidated_scattered/Pi-CEO/.harness/artefacts/synthex/sandbox/Synthex/brand-intelligence/systemd/: synthex-pipeline.service  synthex-pipeline.timer
.harness/artefacts/synthex/sandbox/_consolidated_scattered/Pi-CEO/.harness/artefacts/synthex/sandbox/Synthex/brand-intelligence/tests/: test_cost_tracker.py  test_orchestrator.py  test_subagents.py
(+5207 files in other folders)
