[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tao"
version = "1.0.0"
description = "Tiered Agent Orchestrator"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "websockets>=12",
    "python-multipart>=0.0.9",
    "httpx>=0.27",
    "pyyaml>=6",
]
